# da-project-2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  evaluation_single.csv  loader.cpp  loader.h  main.cpp
Doxy/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bruteforce_8cpp.html  bruteforce_8cpp.js  bruteforce_8cpp_8o_8d.html  bruteforce_8h.html  bruteforce_8h.js  bruteforce_8h_source.html  classes.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_08cec4c655d37361da453b6dde918433.html  dir_46df22f4d7ab172511c627b4fe1a4f0e.html  dir_46df22f4d7ab172511c627b4fe1a4f0e.js  dir_860c11998a3807e839f8c74cce4c2bd1.html  dir_8a6fc4eb5424530516ba87312adb262c.html  dir_8a6fc4eb5424530516ba87312adb262c.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c0ce462e37efe0a8d60c01d75f78f8a0.html  dir_c0ce462e37efe0a8d60c01d75f78f8a0.js  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f89abcb304c928c7d889aa5625570de5.js  doxygen_crawl.html  dynamic_8cpp.html  dynamic_8cpp.js  dynamic_8cpp_8o_8d.html  dynamic_8h.html  dynamic_8h.js  dynamic_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  greedy_8cpp.html  (+35 more)
Doxy/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  bruteforce_8h.tex  (+34 more)
algorithms/: bruteforce.cpp  bruteforce.h  dynamic.cpp  dynamic.h  greedy.cpp  greedy.h  hybrid.cpp  hybrid.h  linear.cpp  linear.h
data/: evaluation_single.csv
src/: loader.cpp  main.cpp
(+57 files in other folders)
